[package]
name = "rbsqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
libsqlite3-sys = { version = "*", features = ["bundled-sqlcipher"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8", features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio-native-tls",
    "sqlite",
] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1.43"
getrandom = "0.2.2"
